[package]
name = "eui-no-std"
version = "0.2.4"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "EUI-48 and EUI-64 no-std implementation."
license = "MIT"
homepage = "https://github.com/vagola/eui-no-std"
repository = "https://github.com/vagola/eui-no-std"
keywords = ["eui", "eui-48", "eui-64", "no-std"]
readme = "README.md"

[lib]
name = "eui"

[dependencies]
heapless = "0.5"
serde = { version = "1.0", default-features = false, optional = true }
hash32 = "0.1"
hash32-derive = "0.1"

[dev-dependencies]
serde_test = "1.0"

[badges]
travis-ci = { repository = "vagola/eui-no-std", branch = "master" }
codecov = { repository = "vagola/eui-no-std"}